--- a/package.json
+++ b/package.json
@@ -3,8 +3,16 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "dev": "ts-node-dev src/server.ts"
+  },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "prisma": "^4.2.1",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "express": "^4.18.1",
+    "ts-node-dev": "^2.0.0"
   }
 }
