--- a/package.json
+++ b/package.json
@@ -4,14 +4,25 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev src/server.ts"
+    "build": "src",
+    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "eslint": "8.0.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^3.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.7.1",
     "prisma": "^4.2.1",
-    "typescript": "^4.7.4"
+    "typescript": "*"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "5.0.0",
+    "eslint-config-standard-with-typescript": "^22.0.0",
+    "eslint-plugin-import": "2.25.2",
+    "eslint-plugin-n": "15.0.0",
+    "eslint-plugin-promise": "6.0.0",
     "express": "^4.18.1",
     "ts-node-dev": "^2.0.0"
   }
