making email unique

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Cleyton-1995 <cleytonotyelc1995@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --exit-child --transpile-only --ignore-watch node_modules src/server.ts"
+    "dev": " prisma migrate dev & ts-node-dev --exit-child --transpile-only --ignore-watch node_modules src/server.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
